# v0.23.8
- Small changes to TwoFactors() so variable names get printed properly in tables.



- WriteR() goes live. Does not make use of all arguments just yet.
- updated some of the vignette files
- added option for BrailleR.SlideStyle in readiness for MakeSlideShow() function that will turn a series of Rmd files into a set of html slides.
- fixed mismatch in BrailleR.Style option name.
- added internal function that will seek the path of the desired css file for the user.
- enhanced the SetupBrailleR() to copy css files
- added use of the css file chosen using BrailleR.Style to be used for UniDesc() etc.
- The MakeSlideShow() function is ready to go including addition of a contents slide.
- updated DESCRIPTION file to add GitHub links.

# v0.23.6
- reinstated use of a local file for local settings
- Added creation of "MyBrailleR" folder for user preferences and files. This only happens if the user agrees otherwise a temporary folder is created Thanks to Henrik Bengtssonfor code suggestions and comments.
- settings files will be copied to the user folder if needed.
- fixed case sensitive typo in BrailleROptions settings file for BrailleR.Embosser
- SaveMySettings() and RestoreMySettings() functions now redundant; removed as they were never released publicly.
- introduced use of normalizePath(). Thanks to Henrik Bengtsson.
- made some changes to replace cat() with message(). Suggestion from Henrik Bengtsson. (might be more of them to fix.)
- added creation of Readme.txt file in the MyBrailleR folder which contains the date and the version of BrailleR being used.
- New version of WriteR 0.160105.3
- established GitHub repository at ajrgodfrey/BrailleR


# v0.23.5
- Implemented use of local settings stored in .BrailleROptions object (hidden)
- There is now  a set of defaults that can be restored in addition to the currently active set of preferences in the BrailleROptions file within the package.